--- a/multiple_linear_regression.ipynb
+++ b/multiple_linear_regression.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/girishpatil1992/MachineLearningFromUdemy/blob/main/multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/girishpatil1992/MachineLearningFromUdemy/blob/R2_Score-Performance-Check-on-All-Model/multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,7 +50,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 25,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -68,179 +68,12 @@
         "id": "UrxyEKGn_ez7"
       },
       "source": [
-        "dataset = pd.read_csv('50_Startups.csv')\n",
+        "dataset = pd.read_csv('Data.csv')\n",
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ],
-      "execution_count": 26,
+      "execution_count": 2,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GOB3QhV9B5kD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f777852d-7091-46fd-b25c-82a633cf5dee"
-      },
-      "source": [
-        "print(X)"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[165349.2 136897.8 471784.1 'New York']\n",
-            " [162597.7 151377.59 443898.53 'California']\n",
-            " [153441.51 101145.55 407934.54 'Florida']\n",
-            " [144372.41 118671.85 383199.62 'New York']\n",
-            " [142107.34 91391.77 366168.42 'Florida']\n",
-            " [131876.9 99814.71 362861.36 'New York']\n",
-            " [134615.46 147198.87 127716.82 'California']\n",
-            " [130298.13 145530.06 323876.68 'Florida']\n",
-            " [120542.52 148718.95 311613.29 'New York']\n",
-            " [123334.88 108679.17 304981.62 'California']\n",
-            " [101913.08 110594.11 229160.95 'Florida']\n",
-            " [100671.96 91790.61 249744.55 'California']\n",
-            " [93863.75 127320.38 249839.44 'Florida']\n",
-            " [91992.39 135495.07 252664.93 'California']\n",
-            " [119943.24 156547.42 256512.92 'Florida']\n",
-            " [114523.61 122616.84 261776.23 'New York']\n",
-            " [78013.11 121597.55 264346.06 'California']\n",
-            " [94657.16 145077.58 282574.31 'New York']\n",
-            " [91749.16 114175.79 294919.57 'Florida']\n",
-            " [86419.7 153514.11 0.0 'New York']\n",
-            " [76253.86 113867.3 298664.47 'California']\n",
-            " [78389.47 153773.43 299737.29 'New York']\n",
-            " [73994.56 122782.75 303319.26 'Florida']\n",
-            " [67532.53 105751.03 304768.73 'Florida']\n",
-            " [77044.01 99281.34 140574.81 'New York']\n",
-            " [64664.71 139553.16 137962.62 'California']\n",
-            " [75328.87 144135.98 134050.07 'Florida']\n",
-            " [72107.6 127864.55 353183.81 'New York']\n",
-            " [66051.52 182645.56 118148.2 'Florida']\n",
-            " [65605.48 153032.06 107138.38 'New York']\n",
-            " [61994.48 115641.28 91131.24 'Florida']\n",
-            " [61136.38 152701.92 88218.23 'New York']\n",
-            " [63408.86 129219.61 46085.25 'California']\n",
-            " [55493.95 103057.49 214634.81 'Florida']\n",
-            " [46426.07 157693.92 210797.67 'California']\n",
-            " [46014.02 85047.44 205517.64 'New York']\n",
-            " [28663.76 127056.21 201126.82 'Florida']\n",
-            " [44069.95 51283.14 197029.42 'California']\n",
-            " [20229.59 65947.93 185265.1 'New York']\n",
-            " [38558.51 82982.09 174999.3 'California']\n",
-            " [28754.33 118546.05 172795.67 'California']\n",
-            " [27892.92 84710.77 164470.71 'Florida']\n",
-            " [23640.93 96189.63 148001.11 'California']\n",
-            " [15505.73 127382.3 35534.17 'New York']\n",
-            " [22177.74 154806.14 28334.72 'California']\n",
-            " [1000.23 124153.04 1903.93 'New York']\n",
-            " [1315.46 115816.21 297114.46 'Florida']\n",
-            " [0.0 135426.92 0.0 'California']\n",
-            " [542.05 51743.15 0.0 'New York']\n",
-            " [0.0 116983.8 45173.06 'California']]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VadrvE7s_lS9"
-      },
-      "source": [
-        "## Encoding categorical data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.preprocessing import OneHotEncoder\n",
-        "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [3])], remainder='passthrough')\n",
-        "X = np.array(ct.fit_transform(X))"
-      ],
-      "metadata": {
-        "id": "bdOXAqrFXCZ0"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4ym3HdYeCGYG",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9972eced-088b-4fa0-b1d2-24989d190126"
-      },
-      "source": [
-        "print(X)"
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[0.0 0.0 1.0 165349.2 136897.8 471784.1]\n",
-            " [1.0 0.0 0.0 162597.7 151377.59 443898.53]\n",
-            " [0.0 1.0 0.0 153441.51 101145.55 407934.54]\n",
-            " [0.0 0.0 1.0 144372.41 118671.85 383199.62]\n",
-            " [0.0 1.0 0.0 142107.34 91391.77 366168.42]\n",
-            " [0.0 0.0 1.0 131876.9 99814.71 362861.36]\n",
-            " [1.0 0.0 0.0 134615.46 147198.87 127716.82]\n",
-            " [0.0 1.0 0.0 130298.13 145530.06 323876.68]\n",
-            " [0.0 0.0 1.0 120542.52 148718.95 311613.29]\n",
-            " [1.0 0.0 0.0 123334.88 108679.17 304981.62]\n",
-            " [0.0 1.0 0.0 101913.08 110594.11 229160.95]\n",
-            " [1.0 0.0 0.0 100671.96 91790.61 249744.55]\n",
-            " [0.0 1.0 0.0 93863.75 127320.38 249839.44]\n",
-            " [1.0 0.0 0.0 91992.39 135495.07 252664.93]\n",
-            " [0.0 1.0 0.0 119943.24 156547.42 256512.92]\n",
-            " [0.0 0.0 1.0 114523.61 122616.84 261776.23]\n",
-            " [1.0 0.0 0.0 78013.11 121597.55 264346.06]\n",
-            " [0.0 0.0 1.0 94657.16 145077.58 282574.31]\n",
-            " [0.0 1.0 0.0 91749.16 114175.79 294919.57]\n",
-            " [0.0 0.0 1.0 86419.7 153514.11 0.0]\n",
-            " [1.0 0.0 0.0 76253.86 113867.3 298664.47]\n",
-            " [0.0 0.0 1.0 78389.47 153773.43 299737.29]\n",
-            " [0.0 1.0 0.0 73994.56 122782.75 303319.26]\n",
-            " [0.0 1.0 0.0 67532.53 105751.03 304768.73]\n",
-            " [0.0 0.0 1.0 77044.01 99281.34 140574.81]\n",
-            " [1.0 0.0 0.0 64664.71 139553.16 137962.62]\n",
-            " [0.0 1.0 0.0 75328.87 144135.98 134050.07]\n",
-            " [0.0 0.0 1.0 72107.6 127864.55 353183.81]\n",
-            " [0.0 1.0 0.0 66051.52 182645.56 118148.2]\n",
-            " [0.0 0.0 1.0 65605.48 153032.06 107138.38]\n",
-            " [0.0 1.0 0.0 61994.48 115641.28 91131.24]\n",
-            " [0.0 0.0 1.0 61136.38 152701.92 88218.23]\n",
-            " [1.0 0.0 0.0 63408.86 129219.61 46085.25]\n",
-            " [0.0 1.0 0.0 55493.95 103057.49 214634.81]\n",
-            " [1.0 0.0 0.0 46426.07 157693.92 210797.67]\n",
-            " [0.0 0.0 1.0 46014.02 85047.44 205517.64]\n",
-            " [0.0 1.0 0.0 28663.76 127056.21 201126.82]\n",
-            " [1.0 0.0 0.0 44069.95 51283.14 197029.42]\n",
-            " [0.0 0.0 1.0 20229.59 65947.93 185265.1]\n",
-            " [1.0 0.0 0.0 38558.51 82982.09 174999.3]\n",
-            " [1.0 0.0 0.0 28754.33 118546.05 172795.67]\n",
-            " [0.0 1.0 0.0 27892.92 84710.77 164470.71]\n",
-            " [1.0 0.0 0.0 23640.93 96189.63 148001.11]\n",
-            " [0.0 0.0 1.0 15505.73 127382.3 35534.17]\n",
-            " [1.0 0.0 0.0 22177.74 154806.14 28334.72]\n",
-            " [0.0 0.0 1.0 1000.23 124153.04 1903.93]\n",
-            " [0.0 1.0 0.0 1315.46 115816.21 297114.46]\n",
-            " [1.0 0.0 0.0 0.0 135426.92 0.0]\n",
-            " [0.0 0.0 1.0 542.05 51743.15 0.0]\n",
-            " [1.0 0.0 0.0 0.0 116983.8 45173.06]]\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -260,7 +93,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
       ],
-      "execution_count": 30,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -276,18 +109,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "ywPjx0L1BMiD",
+        "outputId": "ab690df3-4b6f-4e79-c487-478e68149a48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        },
-        "outputId": "63857e72-465f-43c0-a7d7-f164034505a3"
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train, y_train)"
       ],
-      "execution_count": 31,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +133,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 4
         }
       ]
     },
@@ -317,33 +150,66 @@
       "cell_type": "code",
       "metadata": {
         "id": "TQKmwvtdBkyb",
+        "outputId": "9b848421-8358-4da2-9014-8808cd40a1aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "06460761-8d37-47fb-d130-27e3f2f29b36"
+        }
       },
       "source": [
         "y_pred = regressor.predict(X_test)\n",
         "np.set_printoptions(precision=2)\n",
         "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
       ],
-      "execution_count": 32,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[103015.2  103282.38]\n",
-            " [132582.28 144259.4 ]\n",
-            " [132447.74 146121.95]\n",
-            " [ 71976.1   77798.83]\n",
-            " [178537.48 191050.39]\n",
-            " [116161.24 105008.31]\n",
-            " [ 67851.69  81229.06]\n",
-            " [ 98791.73  97483.56]\n",
-            " [113969.44 110352.25]\n",
-            " [167921.07 166187.94]]\n"
+            "[[431.43 431.23]\n",
+            " [458.56 460.01]\n",
+            " [462.75 461.14]\n",
+            " ...\n",
+            " [469.52 473.26]\n",
+            " [442.42 438.  ]\n",
+            " [461.88 463.28]]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "50DZZy0UyhLi"
+      },
+      "source": [
+        "## Evaluating the Model Performance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xPagAOKDywV4",
+        "outputId": "342a229b-28b1-4393-edb5-0f718e77432b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn.metrics import r2_score\n",
+        "r2_score(y_test, y_pred)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9325315554761303"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
